[workspace]
members = ["jsc_rs", "javascriptcore-macros"]

[package]
name = "javascriptcore"
version = "0.2.42"
edition = "2021"
authors = ["LunosRS", "Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Bindings to the JavaScriptCore framework."
categories = ["api-bindings"]
exclude = ["javascript_core/**"]

[dependencies]
javascriptcore-macros = { path = "javascriptcore-macros", version = "0.1.42" }
javascriptcore-sys = { path = "jsc_rs", version = "0.1.42" }
thiserror = "2.0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1  # Slightly faster builds while maintaining good debug info
