[package]
name = "javascriptcore-macros"
version = "0.1.42"
edition = "2021"
authors = ["LunosRS", "Bruce Mitchener <bruce.mitchener@gmail.com>", "Ivan Enderlin <ivan@mnt.io>"]
license = "MIT OR Apache-2.0"
description = "Procedural macros for the `javascriptcore` crate."
keywords = ["javascript", "jsc", "scripting"]
categories = ["external-ffi-bindings"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
