[package]
name = "rusty_jsc"
version = "0.1.42"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Raw bindings to the JavaScriptCore framework."
build = "build.rs"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3.9"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
inherits = "release"
codegen-units = 1
lto = true
